infra/k8s/selenium-chrome-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selenium-chrome
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: selenium-node
      browser: chrome
  template:
    metadata:
      labels:
        app: selenium-node
        browser: chrome
    spec:
      containers:
        - name: chrome-node
          image: selenium/node-chrome:142.0-20251101
          ports:
            - containerPort: 5555
          resources:
            limits:
              memory: "1024Mi"
              cpu: "1000m"
