infra/k8s/selenium-firefox-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selenium-firefox
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: selenium-node
      browser: firefox
  template:
    metadata:
      labels:
        app: selenium-node
        browser: firefox
    spec:
      containers:
        - name: firefox-node
          image: selenium/node-firefox:144.0-20251101
          ports:
            - containerPort: 5555
          resources:
            limits:
              memory: "1024Mi"
              cpu: "1000m"
