infra/k8s/selenium-hub-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selenium-hub
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: selenium-hub
  template:
    metadata:
      labels:
        app: selenium-hub
    spec:
      containers:
        - name: selenium-hub
          image: selenium/hub:4.38.0
          ports:
            - containerPort: 4444
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
