infra/k8s/backend-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      cybernotes: backend
  template:
    metadata:
      labels:
        cybernotes: backend
    spec:
      containers:
        - name: backend
          image: ${IMAGE_NAME}
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
---
apiVersion: v1 
kind: Service
metadata:
  name: backend-service
  namespace: test
spec:
  selector:
    cybernotes: backend
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
