infra/k8s/selenium-hub-service-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: selenium-hub
  namespace: test
spec:
  selector:
    app: selenium-hub
  ports:
    - name: web
      protocol: TCP
      port: 4444
      targetPort: 4444
    - name: publish
      protocol: TCP
      port: 4442
      targetPort: 4442
    - name: subscribe
      protocol: TCP
      port: 4443
      targetPort: 4443
  type: ClusterIP
